hphp/test/zend/good/Zend/tests/variadic/only_last_error.php.expectf

Fatal error: A variadic parameter ('...') may only appear at the end of a parameter list. in %s/only_last_error.php on line 3
